style: fix color, spacing

--- a/components/layout/footer.module.css
+++ b/components/layout/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background: var(--color-primary);
+  background: var(--color-light);
   padding: 3rem 0;
   text-align: center;
   font-size: 0.9rem;
