--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 /* google fonts */
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 
 /* Light 300, Regular 400, Medium 500, SemiBold 600 */
@@ -17,7 +17,7 @@
 :root {
   --color-bg: #2F3A47;
   --color-bg-variant: #4A5C6B;
-  --color-primary: #B0B7BC;
+  --color-primary: #F4F6F7;
   --color-accent: #8E44AD;
   --color-primary-variant: rgba(176, 183, 188, 0.4);
   --color-white: #F4F6F7;
@@ -43,16 +43,16 @@ html {
 }
 
 /* google fonts */
-/* body {
+body {
   font-family: 'Poppins', sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../public/bg-texture.png);
-} */
+}
 
 
-body {
+/* body {
   background: var(--color-bg);
   color: var(--color-white);
   font-family: "Space Grotesk", serif;
@@ -61,7 +61,7 @@ body {
   font-style: normal;
   line-height: 1.7;
   background-image: url(../public/bg-texture.png);
-}
+} */
 /* ================= GENERAL STYLES ================= */
 
 .container {
@@ -92,6 +92,10 @@ section > h2 {
 }
 
 .text-light {
+  color: var(--color-light);
+}
+
+.text-light-margin {
   color: var(--color-light);
   margin-bottom: 1rem;
 }
